c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_lex/unterminated_char_constant.c
int main(void)
{
    return 'x
}